[workspace]
members = [
	"vault-cli"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
jito-restaking-sanitization = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-jsm-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-sdk = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
solana-client = "~1.17.0"
solana-sdk = "~1.17.0"
thiserror = "1.0.50"
