[workspace]
members = [
	"vault-cli"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
jito-jsm-core = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-vault-core = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-restaking-core = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-restaking-sdk = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-vault-sdk = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-vault-program = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-restaking-program = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-account-traits-derive = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
jito-account-traits = { git = "https://github.com/aoikurokawa/restaking.git",branch = "aoikurokawa/token_metadata", version = "=0.0.1" }
lib-sokoban = "0.3.2"
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
thiserror = "1.0.50"
