[package]
name = "chrono-crank"
version = "0.1.0"
edition = "2021"
description = "Script to keep the vault"

[[bin]]
name = "chrono-crank"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
jito-account-traits-derive = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
lib-sokoban = "0.3.2"
solana-account-decoder = "~1.18.0"
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
thiserror = "1.0.50"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
anyhow = "1.0.87"
log = "0.4.22"
