[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
jito-restaking-sanitization = { workspace = true }
jito-jsm-core = { workspace = true }
jito-vault-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-sdk = { workspace = true }
lib-sokoban = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
